css/parser/tests/errors/rome/invalid/selector4/output.stderr
error: ExpectedIdentOrStrForAttrSelectorOp
 --> $DIR/tests/errors/rome/invalid/selector4/input.css:1:7
  |
1 | .class[attr= {
  |       ^^^^^^^

